--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/hogwarts
+spring.datasource.url=jdbc:postgresql://localhost:5433/hogwarts
 spring.datasource.username=student
 spring.datasource.password=chocolatefrog
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 path.to.avatars.folder=./avatars
+spring.jpa.properties.hibernate.default_schema=public
+server.port=8081
