--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.servlet.multipart.max-request-size=10MB
 path.to.avatars.folder=./avatars
 spring.jpa.properties.hibernate.default_schema=public
 server.port=8081
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
