--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 path.to.avatars.folder=./avatars
 spring.jpa.properties.hibernate.default_schema=public
-server.port=8081
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+logging.level.root=info
